<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CLYF</string>
    <string name="enter_your_nickname">Enter your Nickname</string>
    <string name="enter_quiz_password">Enter Quiz password</string>
    <string name="enter">Enter</string>
    <string name="have_you_already_do_the_quiz_see_leaderboard">Have you already do the quiz? See leaderboard</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="home">home</string>
    <string name="refresh">refresh</string>
    <string name="creator">creator</string>
    <string name="guest">guest</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="not_registered_yet_register_now">Not registered yet? Register now</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered_sign_in">Already registered?? Sign in</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="wait">wait…</string>
    <string name="question">QUESTION</string>
    <string name="answer1" tools:ignore="Typos">ANSWER1</string>
    <string name="answer2">ANSWER2</string>
    <string name="answer3">ANSWER3</string>
    <string name="save">save</string>
    <string name="enter_quiz_name">Enter Quiz name</string>
    <string name="enter_question">enter question</string>
    <string name="enter_a_quiz_password">Enter a Quiz password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="save_password">Save Password</string>
    <string name="enter_the_quiz_password">Enter the Quiz password</string>
    <string name="next">Next</string>
    <string name="enter_the_question">Enter the question</string>
    <string name="enter_the_answer_one">Enter the answer one</string>
    <string name="enter_the_answer_two">Enter the answer two</string>
    <string name="enter_the_answer_three">Enter the answer three</string>
    <string name="enter_the_correct_answer">Enter the correct answer</string>
    <string name="enter_the_quiz_name">Enter the Quiz name</string>
    <string name="your_score_is">Your score is:</string>
    <string name="textview">TextView</string>
    <string name="correct_answer">CORRECT ANSWER</string>
    <string name="nickname">NICKNAME</string>
    <string name="score">SCORE</string>
    <string name="forgot_password_reset_it_here">forgot password? reset it here</string>
    <string name="forget_password">Forget Password</string>
</resources>