<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/scorepopwall">

    <TextView
        android:id="@+id/titleScore"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/your_score_is"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/scoreTV"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/textview"
        android:textSize="30sp"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/leaderboardButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:padding="15dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:padding="15dp"
        android:layout_marginBottom="40dp"/>



</LinearLayout>
