<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/questions">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_question"
            android:textAlignment="center"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_answer_one"
            android:textAlignment="center"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/answer2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_answer_two"
            android:textAlignment="center"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/answer3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_answer_three"
            android:textAlignment="center"
            android:gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/correctanswer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_correct_answer"
            android:textAlignment="center"
            android:gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"/>


</LinearLayout>