<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/exitwall">

    <TextView
        android:id="@+id/QuizPasswordTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/enter_a_quiz_password"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/QuizPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_a_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/QuizPasswordSave"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:padding="15dp"
        android:text="@string/save_password" />

</LinearLayout>